--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ background-size: cover; */
     font-size: 2rem;
     font-size: 20px;
     line-height: 3.2rem;
-    padding: 110px 150px 160px 150px;
+    /*padding: 110px 150px 160px 150px;*/ Second Scroll bar issue 
 }
 #contact .texte1 strong {
     display: block;
