--- a/css/main_nav.css
+++ b/css/main_nav.css
@@ -1,124 +1,3 @@
-/* PARALLAX SCROLLING EXPERIMENT
-   Master Styles
-   Author: Jonathan Nicol (f6design.com)
-*****************************************************************/
-
-/* Extended base styles (site specific)
-*****************************************************************/
-
-html { 
-	overflow-y: scroll; /* always force a scrollbar in non-IE */
-	}
-body {
-	background: #e3e5e5;
-	overflow-x: hidden;
-	height: 4550px; /* ? MW */
-	line-height: 1.5;
-	color: #000;
-	font-size: 14px;
-	font-family: Arial,sans-serif;
-}
-
-/* Nav
-*****************************************************************/
-
-nav#primary {
-	z-index: 5;
-	position: fixed;
-	top: 50%;
-	right: 16px;
-	margin-top: -40px;
-}
-nav#primary li {
-	position: relative;
-	height: 20px;
-}
-nav#primary a {
-	display: block;
-	width: 20px;
-	height: 20px;
-	text-indent: -9999px;
-	background: transparent url('../images/nav-dot.png') 4px 4px no-repeat;
-}
-nav#primary a:hover, nav#primary a.active {
-	background: transparent url('../images/nav-dot.png') 4px -16px no-repeat;
-}
-nav#primary h1 {
-	position: absolute;
-	right: 22px;
-	top: -7px;
-	display: none;
-	padding: 4px 20px 4px 7px;;
-	color: #fff;
-	white-space: nowrap;
-	background: transparent url('../images/nav-arrow.png') 100% 50% no-repeat;
-	}
-nav.next-prev {
-	margin: 20px 0 0 0;
-	}
-
-/* Parallax
-*****************************************************************/
-
-/* content */
-#content {
-	z-index: 4;
-	position: relative;
-	max-width: 940px;
-	padding: 0 10px;
-	margin: 0 auto;
-	line-height: 1.7;
-	}
-	#content article {
-		width: 300px;
-		}
-
-
-@import url(http://fonts.googleapis.com/css?family=Vollkorn|Roboto);
-body {
-  background: #F5F5F5;
-}
-
-.container {
-  position: absolute;
-  width: 100%;
-  heigh: 100%;
-  text-align: center;
-  top: 40%;
-  left: 0;
-  margin: 0 auto;
-  font-family: 'Roboto', sans-serif;
-}
-.container p {
-  font-size: 20px;
-}
-.container a {
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  color: #FF5252;
-  text-decoration: none;
-  font-size: 20px;
-  overflow: hidden;
-  top: 5px;
-}
-.container a:after {
-  content: '';
-  position: absolute;
-  background: #FF5252;
-  height: 2px;
-  width: 0%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  left: 50%;
-  bottom: 0;
-  -webkit-transition: .35s ease;
-  transition: .35s ease;
-}
-.container a:hover:after {
-  width: 100%;
-}
-
 h1 {
   position: relative;
   text-align: center;
@@ -154,7 +33,7 @@ h1 {
   background: #FFF;
 }
 .button_container span {
-  background: #FF5252;
+  background: #008b97;
   border: none;
   height: 5px;
   width: 100%;
@@ -186,7 +65,7 @@ h1 {
 }
 .overlay:before {
   content: '';
-  background: #FF5252;
+  background: #01474f;
   left: -55%;
   top: 0;
   width: 50%;
@@ -197,7 +76,7 @@ h1 {
 }
 .overlay:after {
   content: '';
-  background: #FF5252;
+  background: #01474f;
   right: -55%;
   top: 0;
   width: 50%;
@@ -307,6 +186,4 @@ h1 {
     opacity: 1;
     left: 0;
   }
-}
-
-		
+}		
